# FIFAWC26Pool

./: .flake8  .gitignore  Makefile  README.md  TODO.md  dbms_design.txt  pyproject.toml  run.py  setup_git.sh
.devcontainer/: Dockerfile  devcontainer.json  environment.yml
notebooks/: db_playground.ipynb
templates/: schema.sql
wc_pool/: __init__.py  routes.py
wc_pool/utils/: logger.py  paths.py
