[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fifa-wc-2026-pool"
version = "0.1.0"
description = "FIFA World Cup 2026 Pool API"
authors = [
    { name = "Emilio Padron", email = "emiliopm1997@gmail.com" },
    { name = "Marco Gonzalez", email = "other@email.com" }
]

[tool.setuptools.packages.find]
where = ["."]

# -------------------------
# Formatting & Linting
# -------------------------

[tool.black]
line-length = 80

[tool.isort]
profile = "black"
line_length = 80
